content added to all pages

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			</tr>
 			<tr>
 				<td>
+                  <!-- Navigation -->
 					<p><a href="index.html">Home</a></p>
 					<p><a href="recipes.html">Recipes</a></p>
 					<p><a href="contact.html">Contact Us</a></p>
