--- a/contact.html
+++ b/contact.html
@@ -10,22 +10,33 @@
 					<img src="images/cute.jpg" width="150px">
 				</td>
 				<td> 
-					<h1>Ye Olde Bread Shoppe</h1>
+					<h1>Ye Olde Bread Shoppe<br>
+                    - Contact Form
+                    </h1>
 				</td>
 			</tr>
 			<tr>
 				<td>
+                    <!-- Navigation -->
 					<p><a href="index.html">Home</a></p>
 					<p><a href="recipes.html">Recipes</a></p>
 					<p><a href="contact.html">Contact Us</a></p>
 				</td>
 				<td>
-					<h2>Baking the world's most delicious homemade bread for over 100 years!</h2>
-					<img src="images/yum.jpg" width="500px">
-					<p>Ye Olde Bread Shoppe is a family owned business that bakes and sells breads made from our famous 
-                        family recipes. These recipes have been passed down for generations We have chosen a select few 
-                        to share with you <a href="recipes.html">here</a>! If you have any questions or would like us to send you our catalog, please 
-                        visit our <a href="contact.html">Contact Page</a>.</p>
+					<h2>Contact Our Shoppe</h2>
+					<form>
+                        <p>First Name: <input type="text" name="firstName" placeholder="John"></p>
+                        <p>Last Name: <input type="text" name="lastName" placeholder="Smith"></p>
+                        <p>Email Address: <input type="email" name="email" placeholder="jsmith@email.com"></p>
+                        <p>Phone Number: <input type="text" type="phone" placeholder="123-456-7890"></p>
+                        <p>How would you prefer we contact you?
+                            <br>
+                            <input type="radio" name="preference" value="Email">Email
+                            <br>
+                            <input type="radio" name="preference" value="Phone">Phone
+                        </p>
+                        <input type="submit"><input type="reset">
+                    </form>
 
 
 
