update image, final touches

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<table border="1" width="100%">
-			<tr>
+			<tr> 
+                <!-- Page header -->
 				<td width="20%">
 					<img src="images/cute.jpg" width="150px">
 				</td>
@@ -23,6 +24,7 @@
 					<p><a href="contact.html">Contact Us</a></p>
 				</td>
 				<td>
+                    <!-- Page content -->
 					<h2>Contact Our Shoppe</h2>
 					<form>
                         <p>First Name: <input type="text" name="firstName" placeholder="John"></p>
