--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<body>
 		<table border="1" width="100%">
 			<tr>
+                  <!-- Page header -->
 				<td width="20%">
 					<img src="images/cute.jpg" width="150px">
 				</td>
@@ -21,6 +22,7 @@
 					<p><a href="contact.html">Contact Us</a></p>
 				</td>
 				<td>
+                      <!-- Page content -->
 					<h2>Baking the world's most delicious homemade bread for over 100 years!</h2>
 					<img src="images/yum.jpg" width="500px">
 					<p>Ye Olde Bread Shoppe is a family owned business that bakes and sells breads made from our famous 
