--- a/recipes.html
+++ b/recipes.html
@@ -6,6 +6,7 @@
 	<body>
 		<table border="1" width="100%">
 			<tr>
+                  <!-- Page header -->
 				<td width="20%">
 					<img src="images/cute.jpg" width="150px">
 				</td>
@@ -17,12 +18,13 @@
 			</tr>
 			<tr>
 				<td>
-                <!-- Navigation -->
+                   <!-- Navigation -->
 					<p><a href="index.html">Home</a></p>
 					<p><a href="recipes.html">Recipes</a></p>
 					<p><a href="contact.html">Contact Us</a></p>
 				</td>
 				<td>
+                     <!-- Page content -->
 					<h2>Our Famous Basic Bread Recipe</h2>
                     <img src="images/bread.jpg">
 					<p><strong>Ingredients:</strong></p>
@@ -47,7 +49,7 @@
                         <li>Bake at 375° until loaf is golden brown and sounds hollow when tapped or has reached an internal 
                             temperature of 200°, 30-35 minutes. Remove from pans to wire racks to cool.</li>
                     </ol>
-
+        <!-- recipe credit -->
 <p><em>Recipe from: <a href="https://www.tasteofhome.com/recipes/basic-homemade-bread/">Taste of Home</a></em></p>
 
 				</td>
